fix css bug sur le contraste

--- a/front-end/src/app/quizz/jouer-quizz/jouer-quizz.component.scss
+++ b/front-end/src/app/quizz/jouer-quizz/jouer-quizz.component.scss
@@ -12,6 +12,7 @@
 
   width: fit-content;
   height: fit-content;
+  overflow: auto;
 }
 
 .svg {
@@ -25,6 +26,7 @@
 }
 
 .question-text {
+
   font-weight: bold;
   font-size: 3.2em;
   white-space: nowrap;
@@ -55,7 +57,7 @@
 @media (min-width: 600px) {
   svg {
     height: 100px;
-    width: 100%;
+    width: fit-content;
   }
 }
 
